# 2D-Physics-models

solar_system/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
solar_system/src/: Physics.cpp  Physics.h  solar_system_simulator.cpp
solar_system/src/grid_based/: GridBased.cpp  GridBased.h
solar_system/src/physics_object/: CollisionObject.cpp  CollisionObject.h  GravityObject.cpp  GravityObject.h  ObjectData.cpp  ObjectData.h  PhysicsObject.cpp  PhysicsObject.h  PlanetData.cpp  PlanetData.h  Vector2.h  Vector2Int.h  WallObject.cpp  WallObject.h
solar_system/src/planetary_body/: PlanetData.cpp  PlanetData.h  PlanetaryBody.cpp  PlanetaryBody.h  Vector2.h  Vector2Int.h
solar_system/src/time_keeping/: Timer.h
solar_system/src/window/: Color.h  Drawer.cpp  Drawer.h  Window.cpp  Window.h
